[package]
name = "teamspeak-input-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["cargo"] }
env_logger = "0.10.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
serde = "1.0"
serde-teamspeak-querystring = { path = "serde-teamspeak-querystring" }
serde_derive = "1.0"
serde_json = "1.0.79"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.23"