[package]
name = "teamspeak-input-helper"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["cargo"] }
env_logger = "0.10.0"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
rustyline = "11.0.0"
serde = "1.0"
serde-teamspeak-querystring = { path = "serde-teamspeak-querystring" }
serde_derive = "1.0"
serde_json = "1.0.79"
tokio = { version = "1", features = ["full"] }
